memindah dockerfile dan deployaja.yamal

--- a/cicd/bilbos/views/index.html
+++ b/cicd/bilbos/views/index.html
@@ -30,7 +30,7 @@
 <!-- Hero Section -->
 <section id="home" class="hero-section d-flex align-items-center text-white">
   <div class="container text-center">
-    <h1 class="display-4 fw-bold">Selamat Datang di Pondok Pesantren Bilbos</h1>
+    <h1 class="display-4 fw-bold">Pesantren Bilbos</h1>
     <p class="lead mt-3">Unggul dalam prestasi, mulia dengan Al-Quran</p>
     <a href="#programs" class="btn btn-warning btn-lg mt-3">Lihat Program Kami</a>
   </div>
